--- a/client/edit.jade
+++ b/client/edit.jade
@@ -1,7 +1,5 @@
 template(name='edit')
-    with current_doc
-        +text_edit key='title'
-        +text_edit key='slug'
-    each fields
-        .ui.header #{title} #{field_type}
-        +"#{field_type}_edit"
+    .ui.container
+        with current_doc
+            each fields
+                +Template.dynamic template=edit_template
