--- a/components/nav.jade
+++ b/components/nav.jade
@@ -8,8 +8,8 @@ template(name='nav')
         a.icon.item(href='/users' class="{{isActivePath '/users'}}")
             i.users.icon
             //- | users
-        a.icon.item(href='/models' class="{{isActivePath '/models'}}")
-            i.sitemap.icon
+        //- a.icon.item(href='/models' class="{{isActivePath '/models'}}")
+        //-     i.sitemap.icon
             //- | users
         //- each models    
         //-     a.icon.item(href="/m/#{slug}" class="{{isActivePath '/users'}}" title=title)
