--- a/client/client.jade
+++ b/client/client.jade
@@ -6,6 +6,7 @@ head
     script(src='https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js')
     link(rel='stylesheet' type='text/css' href='https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.4/dist/semantic.min.css')
     script(src='https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.4/dist/semantic.min.js')
+    link(href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet")
 
 
 
@@ -21,7 +22,8 @@ template(name='layout')
     //-                     +yield
     //-     //- +footer
     +nav
-    +yield
+    #main
+        +yield
         //- +footer
 
 
