--- a/client/home.jade
+++ b/client/home.jade
@@ -4,43 +4,51 @@ template(name='dashboard')
             .twelve.wide.column
                 .ui.center.aligned.header 
                     i.dashboard.icon
-                    |dashboard
+                    |Gold Run
         .ui.centered.cards
             .ui.card
-                +dashboard_segment title='healthclub' icon='clinic medical' 
-            .ui.card
-                +my_tasks
-            each models
-                a.ui.card(href="/m/#{slug}" class="{{isActivePath '/models'}}")
-                    .content
-                        .ui.header
-                            i.icon(class=icon)
-                            | #{title}
-            a.ui.card(href='/models' class="{{isActivePath '/models'}}")
                 .content
-                    .ui.header
-                        i.cubes.icon
-                        | models
+                    a.header(href='/checkin') 
+                        i.clinic.medical.icon
+                        |Health Club
+            +my_tasks
+            //- each models
+            //-     a.ui.card(href="/m/#{slug}" class="{{isActivePath '/models'}}")
+            //-         .content
+            //-             .ui.header
+            //-                 i.icon(class=icon)
+            //-                 | #{title}
+        .ui.centered.cards
+            //- a.ui.card(href='/models' class="{{isActivePath '/models'}}")
+            //-     .content
+            //-         .ui.header
+            //-             i.cubes.icon
+            //-             | Models
             a.ui.card(href='/frontdesk' class="{{isActivePath '/frontdesk'}}")
                 .content
                     .ui.header
                         i.circle.info.icon
-                        | desk staff
-            a.ui.card(href='/buildings' class="{{isActivePath '/buildings'}}")
-                .content
-                    .ui.header
-                        i.building.icon
-                        | buildings
-            a.ui.card(href='/tasks' class="{{isActivePath '/tasks'}}")
-                .content
-                    .ui.header
-                        i.edit.icon
-                        | tasks
+                        | Desk Staff
+            +buildings_widget
+                
             a.ui.card(href='/keys' class="{{isActivePath '/keys'}}")
                 .content
                     .ui.header
                         i.key.icon
-                        | keys
+                        | Keys
+                
+                
+
+template(name='buildings_widget')
+    a.ui.card(href='/buildings' class="{{isActivePath '/buildings'}}")
+        .content
+            .ui.header
+                i.building.icon
+                | Buildings
+            each buildings
+                .ui.item
+                    .content
+                        .header #{building_code}
                 
                 
                 
@@ -48,7 +56,7 @@ template(name='my_tasks')
     .ui.segment
         a.ui.header(href='/tasks')
             i.tasks.icon 
-            |my tasks
+            |Tasks
         .ui.icon.button.add_task
             i.plus.icon
         each tasks
@@ -56,13 +64,6 @@ template(name='my_tasks')
                 .content
                     .header #{title}
                     .description #{description}
-
-template(name='dashboard_segment')
-    .ui.fluid.segment
-        .ui.header 
-            i.icon(class=icon)
-            |#{title}
-                
 
 
 
