--- a/client/keys.jade
+++ b/client/keys.jade
@@ -52,7 +52,7 @@ template(name='keys')
     .ui.container
         h1.ui.center.aligned.header Gold Run Keys
             i#add_key.green.plus.link.small.icon 
-        .ui.dividing.center.aligned.header Buildings
+        .ui.center.aligned.header Buildings
         each buildings
              .toggle_view_building.ui.button(class=selected_building_class)
                 |#{building_code}
@@ -87,11 +87,11 @@ template(name='keys')
                                 |#{notes}
                             // td #{author.username} #{when}
                             td 
-                                a.ui.basic.button(href="/key/edit/#{_id}")
+                                a.ui.button(href="/key/edit/#{_id}")
                                     i.pencil.icon
                                     | Edit
-                                a.ui.basic.button(href="/key/view/#{_id}")
+                                a.ui.button(href="/key/view/#{_id}")
                                     i.right.arrow.icon
                                     | View
-                                a.add_next_key.ui.basic.button
+                                a.add_next_key.ui.button
                                     | Add Next
