building schemas manually

--- a/client/fields.jade
+++ b/client/fields.jade
@@ -498,7 +498,7 @@ template(name='youtube_view')
 
 
 template(name='boolean_edit')
-    .ui.header #{label} #{key}
+    .ui.header #{label}
     .ui.button.toggle_boolean(class=boolean_toggle_class)
         if field_value
             |Yes
