--- a/client/goldrun.jade
+++ b/client/goldrun.jade
@@ -263,30 +263,30 @@ template(name='checkin_button')
 
 template(name='health_club_info')
     .ui.stackable.grid
-        .three.column.row
+        .three.column.inverted.row
             .column
-                .ui.small.header Wifi
+                .ui.inverted.header Wifi
                 | Gold Run Health Club / goldrun1
-                .ui.small.header Upstairs Code
+                .ui.inverted.header Upstairs Code
                 | 4589
-                .ui.small.header Security
+                .ui.inverted.header Security
                 | 303.443.3701
             .column
-                .ui.small.header Onsite Manager
+                .ui.inverted.header Onsite Manager
                 .ui.list
                     .item Rick Hamp 
                     .item 303.545.1787
                     .item goldruncondos@gmail.com
-                .ui.small.header After Hours Emergency
+                .ui.inverted.header After Hours Emergency
                 | 303.221.1117
-                .ui.small.header Boulder Valley Towing
+                .ui.inverted.header Boulder Valley Towing
                 | 303.444.4868
-                .ui.small.header Colorado Security Services
+                .ui.inverted.header Colorado Security Services
                 | 303.443.3701
-                .ui.small.header Gavins Plumbing
+                .ui.inverted.header Gavins Plumbing
                 | 303.571.5114
             .column
-                .ui.small.header health club hours
+                .ui.inverted.header health club hours
                 .ui.list
                     .item mon 7a-10p
                     .item tues 7a-10p
