--- a/components/nav.jade
+++ b/components/nav.jade
@@ -115,4 +115,4 @@ template(name='footer')
         .row
             .ui.center.aligned.header
                 i.creative.commons.icon
-                |gold run
+                |Gold Run
