--- a/client/edit_post.tpl.jade
+++ b/client/edit_post.tpl.jade
@@ -2,39 +2,18 @@ with post
     .ui.container.basic.segment
         .ui.center.aligned.header Edit Post
         .ui.form
-            .field
-                label Title
-                input#title(type='text' placeholder='Title' value=title)
-            .field
-                label Publish Date
-                input#publish_date(type='date' value=publish_date)
+            +text_edit key='title' label='Title'
+            +date_edit key='publish_date' label='Publish Date'
             // .field
             //     label Description
             //     .froala-container
             //         +froalaReactive getFEContext
-            +edit_description
+            +textarea_edit key='description'
             // .field
             //     textarea#body(rows='5') #{body}
-            +edit_tags
-            .field
-                label Status
-                if published
-                    #unpublish.ui.green.button
-                        |Published
-                else
-                    #publish.ui.basic.button
-                        |Private
-            .field
-                if featured
-                    #make_unfeatured.ui.basic.icon.button
-                        i.toggle.on.icon
-                else
-                    #make_featured.ui.basic.icon.button
-                        i.toggle.off.icon
-                if featured
-                    .ui.green.basic.label Featured
-                else
-                    .ui.basic.label Unfeatured
+            +array_edit key='tags'
+            +boolean_edit key='published' label='Published'
+            +boolean_edit key='featured' label='Featured'
             if title
                 #save_post.ui.green.button 
                     i.check.icon
