add blocks including comments, fixed/improved posts,

--- a/client/fields.jade
+++ b/client/fields.jade
@@ -183,8 +183,8 @@ template(name='html_edit')
                     |#{this}
     .froala-container
         +froalaReactive getFEContext
-    +call_watson mode='html'
-    +tone mode='html'
+    //- +call_watson mode='html'
+    //- +tone mode='html'
 template(name='html_view')
     .ui.accordion
         .active.title
