--- a/client/front_desk.jade
+++ b/client/front_desk.jade
@@ -1,84 +1,83 @@
 template(name='frontdesk')
     .ui.container
         h1.ui.center.aligned.header 
-            i.large.icons
-                i.user.icon
-                i.info.circle.corner.blue.icon
-            |Front Desk
+            i.briefcase.icon
+            |Staff
             // i#add_impounded_bike.green.plus.link.icon 
         +requests
         +schedule
         .ui.header Notices
-        // .ui.centerd.cards
-        //     each bikes
-        //         +bike
+        .ui.centerd.cards
+            each bikes
+                +bike
 
 
 
 
 template(name='schedule')
-    .ui.segment
-        .ui.center.aligned.header Schedule
-        table.ui.definition.celled.striped.selectable.table
-            thead
-                tr
-                    th
-                    th Sunday
-                    th Monday
-                    th Tuesday
-                    th Wednesday
-                    th Thursday
-                    th Friday
-                    th Saturday
-            tbody
-                tr
-                    td Morning 7am-12pm
-                    td 
-                        +facet_staff_select tags='shift,sunday,morning'
-                    td 
-                        +facet_staff_select tags='shift,monday,morning'
-                    td 
-                        +facet_staff_select tags='shift,tuesday,morning'
-                    td 
-                        +facet_staff_select tags='shift,wednesday,morning'
-                    td 
-                        +facet_staff_select tags='shift,thursday,morning'
-                    td 
-                        +facet_staff_select tags='shift,friday,morning'
-                    td 
-                        +facet_staff_select tags='shift,saturday,morning'
-                tr
-                    td Afternoon 12pm-4pm
-                    td 
-                        +facet_staff_select tags='shift,sunday,afternoon'
-                    td 
-                        +facet_staff_select tags='shift,monday,afternoon'
-                    td 
-                        +facet_staff_select tags='shift,tuesday,afternoon'
-                    td 
-                        +facet_staff_select tags='shift,wednesday,afternoon'
-                    td 
-                        +facet_staff_select tags='shift,thursday,afternoon'
-                    td 
-                        +facet_staff_select tags='shift,friday,afternoon'
-                    td 
-                        +facet_staff_select tags='shift,saturday,afternoon'
-                tr
-                    td Evening 4pm-9pm
-                    td 
-                        +facet_staff_select tags='shift,sunday,evening'
-                    td 
-                        +facet_staff_select tags='shift,monday,evening'
-                    td 
-                        +facet_staff_select tags='shift,tuesday,evening'
-                    td 
-                        +facet_staff_select tags='shift,wednesday,evening'
-                    td 
-                        +facet_staff_select tags='shift,thursday,evening'
-                    td 
-                        +facet_staff_select tags='shift,friday,evening'
-                    td 
-                        +facet_staff_select tags='shift,saturday,evening'
+    .ui.center.aligned.header 
+        i.calendar.icon
+        |Schedule
+    table.ui.definition.celled.striped.selectable.table
+        thead
+            tr
+                th
+                th Sunday
+                th Monday
+                th Tuesday
+                th Wednesday
+                th Thursday
+                th Friday
+                th Saturday
+        tbody
+            tr
+                td Morning 7am-12pm
+                td 
+                    +facet_staff_select tags='shift,sunday,morning'
+                td 
+                    +facet_staff_select tags='shift,monday,morning'
+                td 
+                    +facet_staff_select tags='shift,tuesday,morning'
+                td 
+                    +facet_staff_select tags='shift,wednesday,morning'
+                td 
+                    +facet_staff_select tags='shift,thursday,morning'
+                td 
+                    +facet_staff_select tags='shift,friday,morning'
+                td 
+                    +facet_staff_select tags='shift,saturday,morning'
+            tr
+                td Afternoon 12pm-4pm
+                td 
+                    +facet_staff_select tags='shift,sunday,afternoon'
+                td 
+                    +facet_staff_select tags='shift,monday,afternoon'
+                td 
+                    +facet_staff_select tags='shift,tuesday,afternoon'
+                td 
+                    +facet_staff_select tags='shift,wednesday,afternoon'
+                td 
+                    +facet_staff_select tags='shift,thursday,afternoon'
+                td 
+                    +facet_staff_select tags='shift,friday,afternoon'
+                td 
+                    +facet_staff_select tags='shift,saturday,afternoon'
+            tr
+                td Evening 4pm-9pm
+                td 
+                    +facet_staff_select tags='shift,sunday,evening'
+                td 
+                    +facet_staff_select tags='shift,monday,evening'
+                td 
+                    +facet_staff_select tags='shift,tuesday,evening'
+                td 
+                    +facet_staff_select tags='shift,wednesday,evening'
+                td 
+                    +facet_staff_select tags='shift,thursday,evening'
+                td 
+                    +facet_staff_select tags='shift,friday,evening'
+                td 
+                    +facet_staff_select tags='shift,saturday,evening'
 
 
 
